manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: namespace-admission
  namespace: namespace-admission
  labels:
    name: namespace-admission
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    name: namespace-admission
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: namespace-admission
  namespace: namespace-admission
  labels:
    name: namespace-admission
spec:
  replicas: 1
  template:
    metadata:
      name: namespace-admission 
      labels:
        name: namespace-admission
    spec:
      containers:
        - name: webhook
          image: namespace-admission:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 50Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: namespace-admission-certs
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: namespace-admission
webhooks:
  - name: namespace-admission.alexglv.github.com
    clientConfig:
      service:
        name: namespace-admission
        namespace: namespace-admission
        path: "/"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNE1Ea3dOREV3TlRVd01Wb1hEVEk0TURrd01URXdOVFV3TVZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS1IrCjJrRDNVZC8xcE1seVVWT0dLSUFIdEw1L0crSjVhTnRKakl3NTdkeE4vam0rNWxYeCtCMTZIREJiNjJNZkFYWloKaXFJQzR4QThYYUtXY09sVFdnNHJHbittNU8ybndqTEQwMEhMTEc3QnpYeHpEd0pWM2RGMVl4U1pqbXpnOVdUSwowTGZGNjZyeGxY [...]
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["namespaces"]
    failurePolicy: Ignore
